Add button to loop scale generator

--- a/project/templates/output.html
+++ b/project/templates/output.html
@@ -7,4 +7,13 @@
         <h2> {{ new_scale }} </h2>
     {% endif %}
 
+    <form method="POST">
+        <!--<select name="scales">
+          <option value="beginner">Beginner</option>
+          <option value="advanced">Advanced</option>
+        </select>-->
+        <button type="submit"> <a href="output"> Generate scale </a> </button>
+        <!--<input type="submit">-->
+    </form>
+
 {% endblock content %}
